# centralmcp

./: .gitignore  .mcp.http.json.example  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SESSION_CONTEXT.md  SESSION_CONTEXT.md.example  SUPPORT.md  docker-compose.yml  mcp_server.py  mcp_server_old.py  package-lock.json  pyproject.toml  run_pipeline.py  run_ssid.py
.claude/: launch.json  settings.local.json
.claude/agents/: aruba-api-expert.md  claude-api-expert.md  github-sleuth.md  mcp-engineer.md
.cursor/: mcp.dev.json  mcp.json
.cursor/rules/: cross-agent-handoff.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_question.yml
config/: credentials.yaml.example
docs/: 404.md  AUDIT-2026-06-03.md  RAG-ARCHITECTURE.md  README.md  _config.yml  example-prompts.md  getting-started.md  hpe-support-events-endpoint.md  index.md  mcp-client-recipes.md  optional-products.md  product-workflows.md  release-indexes.md  robots.txt  sitemap.xml  tool-router.md  troubleshooting.md
docs/architecture/: RAG-ARCHITECTURE.md  README.md  system-overview.md
docs/audits/: AUDIT-2026-06-03.md  README.md
docs/operations/: README.md  hpe-support-events-endpoint.md
docs/plans/: README.md  agentic-rag-plan.md
ingestion/: cfg_urls_raw.json  chunking.py  discover_aos_urls.py  ingest_docs.py  scrape.py  scrape_aos_pw.py  scrape_cnac_spec.py  scrape_openapi.py  scrape_reference.py  scrape_techdocs.py  scrape_techdocs_pw.py  scrape_vsg.py  source_manifest.json  techdocs_paths.json
inputs/: lab_test.csv  migration_example.csv  migration_template.csv  sg30lmr164.csv  sg30lmr164_vlan_intfs.cfg
mcp_servers/: _cache_hygiene.py  aos8.py  apstra.py  clearpass.py  config.py  edgeconnect.py  glp.py  mist.py  monitoring.py  nac.py  ops.py  prompts.py  rag.py  shared.py  tool_router.py  uxi.py
mcp_servers/_middleware/: __init__.py  install.py  mac_normalizer.py  null_strip.py  rate_limit.py  response_envelope.py  unknown_tool_suggest.py
pipeline/: config.py  create_ssid.py  csv_loader.py  models.py  reporter.py  ssid_underlay.py  state_store.py  vlan_interface_loader.py  vlan_loader.py
pipeline/clients/: central_client.py  embed_client.py  glp_client.py  lance_client.py  mcp_client.py  ollama_client.py  qdrant_client.py  redis_client.py  specs_index.py  token_manager.py
pipeline/stages/: base.py  s1_discover.py  s2_validate.py  s3_offboard.py  s4_transfer.py  s5_onboard.py  s6_configure.py  s7_firmware.py  s8_verify.py
resources/: README.md  download_collections.py
scripts/: doctor.py  download_indexes.py  ingest_tools.py  package_indexes.py  run_http_router.sh  setup_wizard.py  sync_obsidian.sh  validate_release.py
tests/: conftest.py
tests/eval/: rag_eval.yaml  run_eval.py
tests/integration/: test_pipeline_dry_run.py
tests/unit/: test_async_mcp_safety.py  test_backend_middleware_parity.py  test_bound_collection_response.py  test_central_client_post_errors.py  test_central_client_retry.py  test_chunking.py  test_clearpass_backend.py  test_config_deletes_and_upgrade.py  test_config_error_handling.py  test_config_glp_overrides.py  test_config_passpoint.py  test_config_webhooks.py  test_csv_loader.py  test_docker_compose.py  test_doctor.py  test_download_indexes.py  test_find_tool_budget.py  test_glp_backend.py  test_glp_client_errors.py  test_glp_v2beta1_writes.py  test_http_client_boundaries.py  test_ingest_docs.py  test_ingest_tools_products.py  test_lance_client.py  test_list_output_bounding.py  test_markdown_links.py  test_mcp_client.py  test_mcp_config_examples.py  test_models.py  (+35 more)
