[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "api-central"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "pycentral>=2.0a0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
run-pipeline = "run_pipeline:main"
run-ssid = "run_ssid:main"
mcp-ssid = "mcp_server:mcp.run"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
