[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api-central"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "mcp[cli]>=1.0.0",
    # RAG
    "httpx>=0.27.0",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.58.0",
    "redis>=7.4.0",
    "numpy>=2.2.6",
    "lancedb>=0.33.0",
    "fastembed>=0.8.0",
]

[project.scripts]
run-pipeline = "run_pipeline:main"
run-ssid = "run_ssid:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["pipeline*", "mcp_servers*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
