[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "centralmcp"
version = "0.2.1"
description = "Low-token HPE Networking MCP server for Aruba Central, GreenLake, RAG/OpenAPI lookup, and optional product automation."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "ai-for-networking",
    "apstra",
    "aruba-api",
    "aruba-central",
    "arubaos8",
    "clearpass",
    "edgeconnect-acl-groups",
    "edgeconnect",
    "edgeconnect-interface-labels",
    "edgeconnect-services",
    "edgeconnect-zones",
    "fastmcp",
    "greenlake",
    "hpe-aruba-networking",
    "hpe-greenlake",
    "hpe-networking",
    "mcp-server",
    "mist",
    "model-context-protocol",
    "network-automation",
    "openapi",
    "rag",
    "zone-based-firewall",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "mcp[cli]>=1.0.0",
    # RAG
    "httpx>=0.27.0",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.58.0",
    "redis>=7.4.0",
    "numpy>=2.2.6",
    "lancedb>=0.33.0",
    "fastembed>=0.8.0",
]

[project.scripts]
run-pipeline = "run_pipeline:main"
run-ssid = "run_ssid:main"

[project.urls]
Homepage = "https://secure-ssid.github.io/centralmcp/"
Repository = "https://github.com/secure-ssid/centralmcp"
Documentation = "https://secure-ssid.github.io/centralmcp/"
Issues = "https://github.com/secure-ssid/centralmcp/issues"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = ["run_pipeline", "run_ssid"]

[tool.setuptools.packages.find]
include = ["pipeline*", "mcp_servers*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
